--- a/src/app/pages/profile/profile-edit/profile-edit.component.html
+++ b/src/app/pages/profile/profile-edit/profile-edit.component.html
@@ -91,7 +91,10 @@
           <input matInput type="text" [(ngModel)]="profile.lud16" placeholder="satoshi@bitcoin.org" />
         </mat-form-field>
       </p> -->
-            <p>Last updated: {{ metadata()!.created_at | ago }}</p>
+            <p>Last updated: {{ metadata()!.event.created_at | ago }}</p>
+
+            {{ metadata() | json }}<br><br>
+            {{ profile() }}
 
         </mat-card-content>
         }
