--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -2,16 +2,16 @@
     @if (profile(); as profile) {
 
     @if (!compact()) {
-    <div class="profile-banner" [class.clickable]="profile.content.banner"
-        [style.background-image]="profile.content.banner ? 'url(' + profile.content.banner + ')' : getDefaultBanner()"
-        (click)="profile.content.banner && layout.openProfileBanner(profile)">
+    <div class="profile-banner" [class.clickable]="profile.data.banner"
+        [style.background-image]="profile.data.banner ? 'url(' + profile.data.banner + ')' : getDefaultBanner()"
+        (click)="profile.data.banner && layout.openProfileBanner(profile)">
     </div>
     }
     <div class="profile-info-container" [class.compact]="compact()">
-        <div class="profile-avatar" [class.clickable]="profile.content.picture"
-            (click)="profile.content.picture && layout.openProfilePicture(profile)">
-            @if (profile.content.picture) {
-            <img [src]="profile.content.picture" alt="Profile picture" class="avatar-image">
+        <div class="profile-avatar" [class.clickable]="profile.data.picture"
+            (click)="profile.data.picture && layout.openProfilePicture(profile)">
+            @if (profile.data.picture) {
+            <img [src]="profile.data.picture" alt="Profile picture" class="avatar-image">
             } @else {
             <mat-icon class="default-avatar">account_circle</mat-icon>
             }
@@ -37,16 +37,16 @@
             </div>
             }
 
-            @if (!compact() && profile.content.website) {
-            <div class="profile-item" title="{{ profile.content.website }}">
+            @if (!compact() && profile.data.website) {
+            <div class="profile-item" title="{{ profile.data.website }}">
                 <mat-icon>link</mat-icon>
-                <span><a [href]="profile.content.website" target="_blank" rel="noopener noreferrer">{{
-                        profile.content.website}}</a></span>
+                <span><a [href]="profile.data.website" target="_blank" rel="noopener noreferrer">{{
+                        profile.data.website}}</a></span>
             </div>
             }
 
-            @if (!compact() && profile.content.about) {
-            <div class="profile-bio">{{ profile.content.about }}</div>
+            @if (!compact() && profile.data.about) {
+            <div class="profile-bio">{{ profile.data.about }}</div>
             }
 
             @if (!compact()) {
