fix: update Azure Web App name and use name service for validation.

--- a/src/app/pages/premium/upgrade/upgrade.component.html
+++ b/src/app/pages/premium/upgrade/upgrade.component.html
@@ -63,7 +63,7 @@
       </div>
 
       <div class="username-preview">
-        <span class="domain-part">https://nostria.app/p/</span>
+        <span class="domain-part">https://nostria.app/u/</span>
         <span class="username-part">{{ usernameFormGroup.get('username')?.value }}</span>
       </div>
       }
