feat: update navigation and header title to reflect 'Feeds' instead of 'Home' and 'Discover'

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-container" [ngClass]="columnLayout()">
   <!-- Header Section -->
   <header class="header-section">
-    <h1 class="title">Discover</h1>
+    <h1 class="title">Feeds</h1>
 
     @if (isMobileView()) {
     <div class="column-navigation">
