feat: update welcome component content and enhance column drop functionality in home component

--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -59,7 +59,7 @@
                             <mat-icon>public</mat-icon>
                             <div class="feature-text">
                                 <h3>Global Scaling</h3>
-                                <p>Built to scale globally by not relying on centralized relays.</p>
+                                <p>Built to scale globally by distributing everyone across many relays.</p>
                             </div>
                         </div>
                     </div>
@@ -72,6 +72,15 @@
                     <h1>Help us scale Nostr</h1>
                     <p>
                         Sign up for Nostria Premium or Premium+ to help us scale Nostr and keep the lights on.
+                    </p>
+                    <h2>Privacy and Connections</h2>
+                    <p>
+                        Nostria will automatically connect to the relays that user's have announced as their own
+                        user relays.
+                    </p>
+                    <p>
+                        Nostria will automatically publish existing events that are found, to the
+                        Discovery Relays and your User Relays, depending on the type of event.
                     </p>
                 </div>
                 }
