--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -9,70 +9,76 @@
     </mat-card-header>
     <mat-card-content> -->
 
-      <div class="about-header">
-        <div>
-          <h1>About Nostria</h1>
-          <h3>Version: {{ version() }}</h3>
-        </div>
-        <div class="logo-container">
-          <img src="icons/icon.svg" alt="Nostria Logo" class="logo">
-        </div>
-      </div>
+  <div class="about-header">
+    <div>
+      <h1>About Nostria</h1>
+      <h3>Version: {{ version() }}</h3>
+    </div>
+    <div class="logo-container">
+      <img src="icons/icon.svg" alt="Nostria Logo" class="logo">
+    </div>
+  </div>
 
-      <p class="description">
-        Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
-        global scale. Your Social Network.
-      </p>
+  <p class="description">
+    Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
+    global scale. Your Social Network.
+  </p>
 
-      <h3>What is Nostria?</h3>
-      <p>
-        Nostria is a client for the Nostr protocol, which is a decentralized social network protocol.
-        It allows users to communicate and share information without relying on a central server.
-      </p>
-      <p>
-        Nostria implements the usage of the Nostr protocol to ensure maximum decentralization and
-        global scalability, without compromising on user experience. The client is designed to be fast,
-        responsive, and easy to use, with a focus on providing a great user experience.
-      </p>
+  <h3>What is Nostria?</h3>
+  <p>
+    Nostria is a client for the Nostr protocol, which is a decentralized social network protocol.
+    It allows users to communicate and share information without relying on a central server.
+  </p>
+  <p>
+    Nostria implements the usage of the Nostr protocol to ensure maximum decentralization and
+    global scalability, without compromising on user experience. The client is designed to be fast,
+    responsive, and easy to use, with a focus on providing a great user experience.
+  </p>
 
-      <h3>Desktop</h3>
-      <p>Nostria is also accessible as desktop app:</p>
-      <ul>
-        <li><a href="https://github.com/sondreb/nostria/releases" target="_blank"  rel="noopener noreferrer">Downloads</a></li>
-      </ul>
+  <p>
+    <button mat-button (click)="resetIntroduction()">Show introduction again</button>
+  </p>
 
-      <h3>More information</h3>
-      <p>
-        Visit our website for more information, documentation, and support.
-      </p>
-      <ul>
-        <li><a href="https://www.nostria.app" target="_blank" rel="noopener noreferrer">Nostria Website</a></li>
-      </ul>
+  <h3>Desktop</h3>
+  <p>Nostria is also accessible as desktop app:</p>
+  <ul>
+    <li><a href="https://github.com/sondreb/nostria/releases" target="_blank" rel="noopener noreferrer">Downloads</a>
+    </li>
+  </ul>
 
-      <div class="links-section">
-        <h3>Useful Links</h3>
-        <mat-list>
-          <mat-list-item>
-            <a href="https://github.com/sondreb/nostria" target="_blank" rel="noopener noreferrer">
-              <mat-icon>code</mat-icon>
-              GitHub Repository
-            </a>
-          </mat-list-item>
-          <mat-list-item>
-            <a href="https://nostr.com" target="_blank" rel="noopener noreferrer">
-              <mat-icon>info</mat-icon>
-              Nostr Protocol
-            </a>
-          </mat-list-item>
-          <mat-list-item>
-            <a href="https://github.com/sondreb/nostria/issues" target="_blank" rel="noopener noreferrer">
-              <mat-icon>bug_report</mat-icon>
-              Report Issues
-            </a>
-          </mat-list-item>
-        </mat-list>
-      </div>
+  <h3>More information</h3>
+  <p>
+    Visit our website for more information, documentation, and support.
+  </p>
+  <ul>
+    <li><a href="https://www.nostria.app" target="_blank" rel="noopener noreferrer">Nostria Website</a></li>
+  </ul>
 
-    <!-- </mat-card-content>
+
+  <div class="links-section">
+    <h3>Useful Links</h3>
+    <mat-list>
+      <mat-list-item>
+        <a href="https://github.com/sondreb/nostria" target="_blank" rel="noopener noreferrer">
+          <mat-icon>code</mat-icon>
+          GitHub Repository
+        </a>
+      </mat-list-item>
+      <mat-list-item>
+        <a href="https://nostr.com" target="_blank" rel="noopener noreferrer">
+          <mat-icon>info</mat-icon>
+          Nostr Protocol
+        </a>
+      </mat-list-item>
+      <mat-list-item>
+        <a href="https://github.com/sondreb/nostria/issues" target="_blank" rel="noopener noreferrer">
+          <mat-icon>bug_report</mat-icon>
+          Report Issues
+        </a>
+      </mat-list-item>
+    </mat-list>
+  </div>
+
+  <!-- </mat-card-content>
   </mat-card> -->
 </div>
